--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
   "name": "ssr-starter-pack",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "engines": {
-    "node": "8.1.4",
-    "npm": "5.0.3",
-    "yarn": "0.27.5"
+    "node": "8.9.3",
+    "npm": "5.5.1",
+    "yarn": "1.3.2"
   },
   "dependencies": {
-    "babel-polyfill": "6.23.0",
-    "body-parser": "1.17.2",
-    "compression": "1.7.0",
-    "consolidate": "0.14.5",
-    "express": "4.15.4",
-    "handlebars": "4.0.10",
-    "prop-types": "15.5.10",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-helmet": "5.1.3",
-    "react-hot-loader": "next",
-    "react-router-config": "1.0.0-beta.3",
-    "react-router-dom": "4.1.2"
+    "@babel/polyfill": "7.0.0-beta.34",
+    "body-parser": "1.18.2",
+    "compression": "1.7.1",
+    "consolidate": "0.15.0",
+    "express": "4.16.2",
+    "handlebars": "4.0.11",
+    "prop-types": "15.6.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-helmet": "5.2.0",
+    "react-hot-loader": "3.1.3",
+    "react-router-config": "1.0.0-beta.4",
+    "react-router-dom": "4.2.2"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.2",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-react-jsx-source": "6.22.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "cross-env": "5.0.5",
-    "css-loader": "0.28.5",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
-    "image-webpack-loader": "3.3.1",
-    "md5-hash-webpack-plugin": "0.1.0",
+    "@babel/core": "7.0.0-beta.34",
+    "@babel/plugin-syntax-object-rest-spread": "7.0.0-beta.34",
+    "@babel/plugin-transform-react-jsx-source": "7.0.0-beta.34",
+    "@babel/preset-env": "7.0.0-beta.34",
+    "@babel/preset-react": "7.0.0-beta.34",
+    "@babel/preset-stage-0": "7.0.0-beta.34",
+    "autoprefixer": "7.2.2",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-loader": "8.0.0-beta.0",
+    "cross-env": "5.1.1",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "image-webpack-loader": "3.4.2",
+    "md5-hash-webpack-plugin": "0.1.1",
     "name-all-modules-plugin": "1.0.1",
     "node-notifier": "5.1.2",
-    "node-sass": "4.5.3",
+    "node-sass": "4.7.2",
     "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.6",
-    "resolve-url-loader": "2.1.0",
+    "postcss-loader": "2.0.9",
+    "resolve-url-loader": "2.2.1",
     "sass-loader": "6.0.6",
-    "style-loader": "0.18.2",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.5",
-    "webpack-dev-middleware": "1.12.0",
-    "webpack-hot-middleware": "2.18.2",
-    "webpack-hot-server-middleware": "0.2.0",
-    "webpack-manifest-plugin": "1.3.1",
+    "style-loader": "0.19.0",
+    "url-loader": "0.6.2",
+    "webpack": "3.10.0",
+    "webpack-dev-middleware": "1.12.2",
+    "webpack-hot-middleware": "2.21.0",
+    "webpack-hot-server-middleware": "0.3.0",
+    "webpack-manifest-plugin": "1.3.2",
     "webpack-node-externals": "1.6.0"
   },
   "scripts": {
