--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "yarn": "1.3.2"
   },
   "dependencies": {
-    "@babel/polyfill": "7.0.0-beta.34",
     "body-parser": "1.18.2",
     "compression": "1.7.1",
     "consolidate": "0.15.0",
@@ -32,11 +31,14 @@
     "autoprefixer": "7.2.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "8.0.0-beta.0",
+    "babel-preset-minify": "0.2.0",
+    "circular-dependency-plugin": "4.3.0",
     "cross-env": "5.1.1",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "image-webpack-loader": "3.4.2",
+    "json-stable-stringify": "1.0.1",
     "md5-hash-webpack-plugin": "0.1.1",
     "name-all-modules-plugin": "1.0.1",
     "node-notifier": "5.1.2",
@@ -50,9 +52,10 @@
     "webpack": "3.10.0",
     "webpack-dev-middleware": "1.12.2",
     "webpack-hot-middleware": "2.21.0",
-    "webpack-hot-server-middleware": "0.3.0",
+    "webpack-hot-server-middleware": "0.3.1",
     "webpack-manifest-plugin": "1.3.2",
-    "webpack-node-externals": "1.6.0"
+    "webpack-node-externals": "1.6.0",
+    "xxhashjs": "0.2.1"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production ASSETS_URL=https://your-cdn.com/ webpack --config webpack.config.js",
