--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "yarn": "1.3.2"
   },
   "dependencies": {
+    "@babel/polyfill": "7.0.0-beta.34",
     "body-parser": "1.18.2",
     "compression": "1.7.1",
     "consolidate": "0.15.0",
@@ -31,7 +32,6 @@
     "autoprefixer": "7.2.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "8.0.0-beta.0",
-    "babel-preset-minify": "0.2.0",
     "circular-dependency-plugin": "4.3.0",
     "cross-env": "5.1.1",
     "css-loader": "0.28.7",
