--- a/package.json
+++ b/package.json
@@ -2,64 +2,63 @@
   "name": "ssr-starter-pack",
   "private": true,
   "version": "1.0.0",
-  "engines": {
-    "node": "8.9.3",
-    "npm": "5.5.1",
-    "yarn": "1.3.2"
-  },
   "dependencies": {
-    "@babel/polyfill": "7.0.0-beta.34",
-    "body-parser": "1.18.2",
-    "compression": "1.7.1",
-    "consolidate": "0.15.0",
-    "express": "4.16.2",
+    "@babel/polyfill": "7.0.0-beta.49",
+    "body-parser": "1.18.3",
+    "compression": "1.7.2",
+    "consolidate": "0.15.1",
+    "express": "4.16.3",
     "handlebars": "4.0.11",
-    "prop-types": "15.6.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "prop-types": "15.6.1",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
     "react-helmet": "5.2.0",
-    "react-hot-loader": "3.1.3",
+    "react-hot-loader": "4.2.0",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.2.2"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.34",
-    "@babel/plugin-syntax-object-rest-spread": "7.0.0-beta.34",
-    "@babel/plugin-transform-react-jsx-source": "7.0.0-beta.34",
-    "@babel/preset-env": "7.0.0-beta.34",
-    "@babel/preset-react": "7.0.0-beta.34",
-    "@babel/preset-stage-0": "7.0.0-beta.34",
-    "autoprefixer": "7.2.2",
+    "@babel/core": "7.0.0-beta.49",
+    "@babel/plugin-syntax-object-rest-spread": "7.0.0-beta.49",
+    "@babel/plugin-transform-react-jsx-source": "7.0.0-beta.49",
+    "@babel/preset-env": "7.0.0-beta.49",
+    "@babel/preset-react": "7.0.0-beta.49",
+    "@babel/preset-stage-3": "7.0.0-beta.49",
+    "autoprefixer": "8.5.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "8.0.0-beta.0",
-    "circular-dependency-plugin": "4.3.0",
-    "cross-env": "5.1.1",
-    "css-loader": "0.28.7",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "image-webpack-loader": "3.4.2",
+    "circular-dependency-plugin": "5.0.2",
+    "cross-env": "5.1.6",
+    "css-loader": "0.28.11",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "1.1.11",
+    "image-webpack-loader": "4.2.0",
     "json-stable-stringify": "1.0.1",
     "md5-hash-webpack-plugin": "0.1.1",
+    "mini-css-extract-plugin": "0.4.0",
     "name-all-modules-plugin": "1.0.1",
-    "node-notifier": "5.1.2",
-    "node-sass": "4.7.2",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.9",
-    "resolve-url-loader": "2.2.1",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.19.0",
-    "url-loader": "0.6.2",
-    "webpack": "3.10.0",
-    "webpack-dev-middleware": "1.12.2",
-    "webpack-hot-middleware": "2.21.0",
-    "webpack-hot-server-middleware": "0.3.1",
-    "webpack-manifest-plugin": "1.3.2",
-    "webpack-node-externals": "1.6.0",
-    "xxhashjs": "0.2.1"
+    "node-notifier": "5.2.1",
+    "node-sass": "4.9.0",
+    "postcss-flexbugs-fixes": "3.3.1",
+    "postcss-loader": "2.1.5",
+    "resolve-url-loader": "2.3.0",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21.0",
+    "url-loader": "1.0.1",
+    "webpack": "4.10.2",
+    "webpack-cli": "2.1.4",
+    "webpack-dev-middleware": "3.1.3",
+    "webpack-hot-middleware": "2.22.2",
+    "webpack-hot-server-middleware": "0.5.0",
+    "webpack-manifest-plugin": "2.0.3",
+    "webpack-node-externals": "1.7.2",
+    "xxhashjs": "0.2.2"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production ASSETS_URL=https://your-cdn.com/ webpack --config webpack.config.js",
-    "build:local": "cross-env NODE_ENV=production LOCAL=true webpack --config webpack.config.js",
+    "build":
+      "cross-env NODE_ENV=production ASSETS_URL=https://your-cdn.com/ webpack --config webpack.config.js",
+    "build:local":
+      "cross-env NODE_ENV=production LOCAL=true webpack --config webpack.config.js",
     "build:clean": "rm -rf public/dist && cd public && mkdir dist",
     "modules:clean": "rm -rf node_modules && mkdir node_modules",
     "start": "node app.js",
