--- a/package.json
+++ b/package.json
@@ -25,16 +25,13 @@
     "@babel/preset-react": "7.0.0-beta.49",
     "@babel/preset-stage-3": "7.0.0-beta.49",
     "autoprefixer": "8.5.2",
-    "babel-core": "7.0.0-bridge.0",
     "babel-loader": "8.0.0-beta.0",
     "circular-dependency-plugin": "5.0.2",
     "cross-env": "5.1.6",
     "css-loader": "0.28.11",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "1.1.11",
     "image-webpack-loader": "4.2.0",
     "json-stable-stringify": "1.0.1",
-    "md5-hash-webpack-plugin": "0.1.1",
     "mini-css-extract-plugin": "0.4.0",
     "name-all-modules-plugin": "1.0.1",
     "node-notifier": "5.2.1",
@@ -46,6 +43,7 @@
     "style-loader": "0.21.0",
     "url-loader": "1.0.1",
     "webpack": "4.10.2",
+    "webpack-chunk-hash": "0.6.0",
     "webpack-cli": "2.1.4",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.2",
@@ -61,7 +59,7 @@
       "cross-env NODE_ENV=production LOCAL=true webpack --config webpack.config.js",
     "build:clean": "rm -rf public/dist && cd public && mkdir dist",
     "modules:clean": "rm -rf node_modules && mkdir node_modules",
-    "start": "node app.js",
-    "dev": "node app.dev.js"
+    "start": "cross-env NODE_ENV=production node app.js",
+    "dev": "node app.js"
   }
 }
