--- a/package.json
+++ b/package.json
@@ -3,24 +3,29 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": "8.9.3",
-    "npm": "5.5.1",
-    "yarn": "1.3.2"
+    "node": ">=8.9.3",
+    "npm": ">=5.5.1",
+    "yarn": ">=1.3.2"
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0-beta.34",
+    "axios": "0.18.0",
     "body-parser": "1.18.2",
     "compression": "1.7.1",
     "consolidate": "0.15.0",
     "express": "4.16.2",
     "handlebars": "4.0.11",
     "prop-types": "15.6.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
     "react-helmet": "5.2.0",
     "react-hot-loader": "3.1.3",
+    "react-redux": "5.0.7",
     "react-router-config": "1.0.0-beta.4",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "redux": "4.0.0",
+    "redux-logger": "3.0.6",
+    "redux-promise-middleware": "5.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0-beta.34",
