feat(images): implement ideal-image-loader

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "compression": "1.7.3",
     "consolidate": "0.15.1",
     "express": "4.16.4",
+    "gatsby-image": "2.0.20",
     "handlebars": "4.0.12",
     "prop-types": "15.6.2",
     "react": "16.6.3",
@@ -29,15 +30,14 @@
     "@babel/preset-env": "7.1.6",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.1.0",
+    "@brigad/ideal-image-loader": "1.0.0",
     "autoprefixer": "9.3.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "8.0.4",
     "circular-dependency-plugin": "5.0.2",
     "cross-env": "5.2.0",
     "css-loader": "1.0.1",
-    "fast-stable-stringify": "1.0.0",
     "file-loader": "2.0.0",
-    "image-webpack-loader": "3.4.2",
     "mini-css-extract-plugin": "0.4.4",
     "node-sass": "4.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -46,7 +46,6 @@
     "sass-loader": "7.1.0",
     "terser-webpack-plugin": "1.1.0",
     "typescript": "3.1.6",
-    "url-loader": "1.1.2",
     "webpack": "4.26.0",
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-cli": "3.1.2",
@@ -57,8 +56,7 @@
     "webpack-merge": "4.1.4",
     "webpack-node-externals": "1.7.2",
     "webpack-notifier": "1.7.0",
-    "webpackbar": "2.6.3",
-    "xxhashjs": "0.2.2"
+    "webpackbar": "2.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production ASSETS_URL=https://your-cdn.com/ webpack --config webpack.config.js",
